parity-rp/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: parity-rp
  labels:
    name: parity-rp
