parity-rp/04-parity-node-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: parity-node
  namespace: parity-rp
  labels:
    run: parity-node
spec:
  replicas: 1
  selector:
    matchLabels:
      run: parity-node
  template:
    metadata:
      name: parity-node
      labels:
        tier: parity
        run: parity-node
    spec:
      containers:
        - name: parity
          image: "parity/parity:stable-release"
          imagePullPolicy: IfNotPresent
          command: ["/parity/parity"]
          args: ["--config", "/config/config.toml"]
          ports:
            - containerPort: 8545
              protocol: TCP
            - containerPort: 30303
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 8545
            initialDelaySeconds: 60
          volumeMounts:
            - name: parity-config
              mountPath: /config
              readOnly: true
            - name: parity-data
              mountPath: /data
        - name: event-watcher
          # TEMPORARY TEST IMAGE
          image: "yzhang1994/eth-node-checker"
          imagePullPolicy: IfNotPresent
          command: ["npm"]
          args: ["start"]
      volumes:
      - name: parity-config
        configMap:
          name: parity-config
      - name: parity-data
        hostPath:
          path: "/mnt/disks/ssd0"
      nodeSelector:
        cloud.google.com/gke-local-ssd: "true"
