parity-rp/05-parity-stateful-set.yml
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: parity-set
  namespace: parity-rp
  labels:
    app: parity-set
spec:
  replicas: 2
  selector:
    matchLabels:
      app: parity-set
  serviceName: parity-set
  template:
    metadata:
      name: parity-set
      labels:
        app: parity-set
    spec:
      containers:
        - name: parity
          image: "parity/parity:stable-release"
          imagePullPolicy: IfNotPresent
          command: ["/parity/parity"]
          args: ["--config", "/parity-config/config.toml"]
          ports:
            - containerPort: 8545
              protocol: TCP
              name: rcp-port
          livenessProbe:
            tcpSocket:
              port: 8545
            initialDelaySeconds: 60
          volumeMounts:
            - name: parity-config
              mountPath: /parity-config
              readOnly: true
            - name: parity-data
              mountPath: /parity-data
        - name: event-watcher
          # TEMPORARY TEST IMAGE
          image: "yzhang1994/eth-node-checker"
          imagePullPolicy: IfNotPresent
          command: ["npm"]
          args: ["start"]
      volumes:
      - name: parity-config
        configMap:
          name: parity-config
  volumeClaimTemplates:
  - metadata:
      name: parity-data
      namespace: parity-rp
    spec:
      accessModes: ["ReadWriteOnce"]
      storageClassName: "parity-ssd"
      resources:
        requests:
          storage: 200Gi
