parity-rp/06-parity-service.yml
apiVersion: v1
kind: Service
metadata:
  name: parity-service
  namespace: parity-rp
  labels:
    app: parity-set
spec:
  ports:
  - port: 8545
    protocol: TCP
    name: rpc-port
    targetPort: 8545
  type: ClusterIP
  selector:
    app: parity-set
