parity-rp/haproxy-ingress-svc.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-ingress
  name: haproxy-ingress
  namespace: parity-rp
spec:
  externalIPs:
  - 10.245.1.4
  ports:
  - name: port-1
    port: 8545
    protocol: TCP
    targetPort: 8545
  - name: port-2
    port: 443
    protocol: TCP
    targetPort: 443
  - name: port-3
    port: 1936
    protocol: TCP
    targetPort: 1936
  selector:
    run: haproxy-ingress
